# emlrust

./: Cargo.toml  LICENSE  README.md  emlrust_0.1.0-1_amd64.deb  setup.sh  uninstaller.sh
src/: emlrustlib.rs  main.rs
