[package]
name = "emlrust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
regex = "1.10"
scraper = "0.18"
walkdir = "2.4"
mail-parser = "0.9"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.deb]
maintainer = "Cookedmelon <cookedmelon@protonmail.com>"
copyright = "2025, CookedMelon <cookedmelon@protonmail.com"
license-file = ["LICENSE", "3"]
extended-description = """
EmlRust is a utility to process .eml files for phishing simulations.
It can convert .eml files to HTML, modify anchor tags, anonymize
email addresses, remove potentially dangerous JavaScript and IPs analyzer of csv Events of gophish."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/emlrust", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/emlrust/README", "644"],
]
